@@ -1,3 +1,12 @@
+2007-07-03  Brian Warner  <warner@lothar.com>
+
+	* buildbot/test/runutils.py (RunMixin.disappearSlave): oops, add
+	an allowReconnect= argument to let callers control whether they
+	want this don't-let-it-reconnect behavior, since some tests care.
+	Factor out the .continueTrying=False lines from those callers.
+	* buildbot/test/test_slaves.py: same
+	* buildbot/test/test_run.py: same
+
 2007-07-02  Brian Warner  <warner@lothar.com>
 
 	* buildbot/test/runutils.py (RunMixin.disappearSlave): once a
